# hook-nt

./: .clang-format  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  THIRD_PARTY_NOTICES.md  build.bat
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  codeql.yml  release.yml
cmake/: distorm.cmake  zydis.cmake
scripts/: smoke.ps1  validate-apiscope-hooks.ps1  validate-ntdlln.ps1
src/apiscope/: CMakeLists.txt  cli_options.cpp  debug_session.cpp  hook_manager.cpp  hook_registry.cpp  instruction_decoder.cpp  main.cpp  memory_utils.cpp  process_manager.cpp  trace_renderer.cpp  trace_session.cpp
src/apiscope-hooks/: CMakeLists.txt  trace_transport.cpp
src/apiscope-hooks/hooks/: bcrypt_bcrypt_open_algorithm_provider.cpp  ntdll_nt_create_file.cpp  ntdll_nt_read_file.cpp  ntdll_nt_write_file.cpp
src/hooknt/: CMakeLists.txt  cli_options.cpp  hook_manager.cpp  hook_registry.cpp  main.cpp  memory_utils.cpp  process_manager.cpp  trace_renderer.cpp  trace_session.cpp
src/include/: api_hook.h  api_hook_descriptor.h  cli_options.h  common.h  debug_session.h  hook_manager.h  hook_registry.h  instruction_decoder.h  logger.h  memory_utils.h  nt_hook.h  process_manager.h  trace_protocol.h  trace_renderer.h  trace_ring.h  trace_session.h  trace_transport.h
src/ntdlln/: CMakeLists.txt  dllmain.cpp  logger.cpp  module_resolver.cpp  trace_transport.cpp
src/ntdlln/hooks/: nt_create_file.cpp  nt_read_file.cpp  nt_write_file.cpp
tests/: CMakeLists.txt  test_cli_options.cpp  test_delayed_bcrypt.cpp  test_file_ops.cpp  test_hook_registry.cpp  test_memory_utils.cpp  test_multithread_file_ops.cpp  test_patch_size.cpp  test_send_ctrl_break.cpp  test_trace_renderer.cpp  test_trace_transport.cpp
